terraform/modules/security/main.tf
resource "aws_security_group" "main" {
  name        = "demo-app-new-relic-sg"
  description = "SG para EC2 e ECS"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH from meu IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "All outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "demo-app-new-relic-sg"
  }
}
